# bevy_rpg_automation

./: Cargo.toml  setup.sh
.cargo/: config.toml
.github/workflows/: dependency_update.yaml  rust_format.yaml
crates/game_action/: Cargo.toml
crates/game_action/src/: lib.rs
crates/game_camera/: Cargo.toml
crates/game_camera/src/: lib.rs  states.rs  systems.rs
crates/game_debug_hud/: Cargo.toml
crates/game_debug_hud/src/: components.rs  lib.rs  systems.rs
crates/game_main/: Cargo.toml
crates/game_main/src/: main.rs
crates/game_player/: Cargo.toml
crates/game_player/src/: lib.rs  systems.rs
docs/: features.md
