[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
bevy = "0.16.1"
avian3d = { version = "^0.3" }
bevy_skein = { version = "^0.2" }

log = "^0.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

