[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false }
avian3d = { version = "^0.3" }
bevy_skein = { version = "^0.2" }
leafwing-input-manager = { version = "^0.17" }

log = "^0.4"

game_player = { path = "crates/game_player" }
game_camera = { path = "crates/game_camera" }
game_debug_hud = { path = "crates/game_debug_hud" }
game_action = { path = "crates/game_action" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

